Apr 18, 2005

  * ADDED: Search in all properties

Apr 3, 2005

  * ADDED: "Show my subjects" to the graph vizualisation.

  * CLEANUP: Some mode issues in the diagram vizualisation.

Mar 30, 2005

  * Added loading Prolog plugins from the commandline

  * Show subclasses of literal using `doc.xpm'.

Mar 29, 2005

  * Fix toplevel after changing to library.

Mar 3, 2005

  * Updated DC schemas from http://dublincore.org/schemas/rdfs/

SNAPSHOT 0.5
============

Mar 02, 2005

  * Some version cleanup

Feb 24, 2005

  * FIXED: various namespace issues

  * ADDED: class sheet: allow adding properties

Sep 13, 2004

  * ADDED: Read namespace identifiers from RDF sourcefiles.

Dec 3, 2003

  * FIXED: generate proper blank nodes in manipulating lists.

Dec 01, 2003

  * FIXED: Handle symmetric properties (Marijn Manders) 

  * ADDED: View/OWL/Super properties

SNAPSHOT 0.3
============

Nov 20, 2003

  * ADDED: Check database for triples that are not in any context.  If
    there are, add 'user' to save file menu.

  * ENHANCED: Tools/Add missing labels: better cleaning of label names,
    capitalise class-names (but not the name of other resources).

Nov 18, 2003

  * ADDED: Protected files and directing new triples to specified files.
    Requires SWI-Prolog 5.2.10 from the BETA download.

Nov 14, 2003

  * ADDED: link to wiki web from help menu (suggested by Mark)