@@ -94,7 +94,7 @@ user:file_search_path(snapshot, user_profile(Dir)) :-
 		 *	      VERSION		*
 		 *******************************/
 
-t20_version('0.6, April 2005').
+t20_version('0.7, May 2005').
 required_prolog_version(50514).
 
 check_prolog_version :-
